--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -23,7 +23,7 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/action_delete_all"
+        android:id="@+id/action_open_history"
         android:icon="@drawable/ic_timeline_black_24dp"
         android:title="@string/history"
         app:showAsAction="ifRoom" />
