--- a/app/src/main/res/layout/activity_new_counter.xml
+++ b/app/src/main/res/layout/activity_new_counter.xml
@@ -27,13 +27,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="144dp"
         android:background="#b2dfdb"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#ad1457"
         app:layout_constraintBottom_toTopOf="@+id/buttonPlay"
-        app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -47,6 +46,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="40dp"
         android:text="Play"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.006"
