--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -8,24 +8,24 @@
     tools:context=".view.MainActivity">
 
     <TextView
-        android:id="@+id/countdownTextView"
+        android:id="@+id/hoursTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="42sp"
-        app:layout_constraintBottom_toTopOf="@+id/hoursTextView"
+        app:layout_constraintBottom_toTopOf="@+id/countdownTextView"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="52:34" />
+        tools:text="7" />
 
     <TextView
-        android:id="@+id/hoursTextView"
+        android:id="@+id/countdownTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="64sp"
         app:layout_constraintBottom_toTopOf="@+id/startButton"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="7" />
+        app:layout_constraintTop_toBottomOf="@+id/hoursTextView"
+        tools:text="52:34" />
 
     <Button
         android:id="@+id/startButton"
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hoursTextView"
+        app:layout_constraintTop_toBottomOf="@+id/countdownTextView"
         tools:text="Start" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
