added displaying history recyclerView

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,7 +11,7 @@
 
     <fragment
         android:id="@+id/statisticsFragment"
-        android:name="com.georgcantor.counter.view.fragment.StatisticsFragment"
+        android:name="com.georgcantor.counter.view.fragment.HistoryFragment"
         android:label="StatisticsFragment" />
 
 </navigation>
