--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/action_history"
         android:icon="@drawable/ic_history"
-        android:title="@string/set"
+        android:title="History"
         app:showAsAction="always" />
 
 </menu>
