--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,4 +14,9 @@
         android:name="com.georgcantor.counter.view.fragment.HistoryFragment"
         android:label="StatisticsFragment" />
 
+    <fragment
+        android:id="@+id/graphFragment"
+        android:name="com.georgcantor.counter.view.fragment.GraphFragment"
+        android:label="GraphFragment" />
+
 </navigation>
