added settings for minutes

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,4 +16,10 @@
         android:title="Graph"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/action_tune"
+        android:icon="@drawable/ic_tune"
+        android:title="Tune"
+        app:showAsAction="ifRoom" />
+
 </menu>
