--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,35 +8,36 @@
     tools:context=".view.MainActivity">
 
     <TextView
-        android:id="@+id/hoursTextView"
+        android:id="@+id/hintTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="@android:color/black"
-        android:textSize="42sp"
-        app:layout_constraintBottom_toTopOf="@+id/countdownTextView"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="7" />
+        android:text="@string/settings_hint"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/minutesEditText"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/countdownTextView"
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/minutesEditText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="@android:color/black"
-        android:textSize="64sp"
-        app:layout_constraintBottom_toTopOf="@+id/startButton"
-        app:layout_constraintTop_toBottomOf="@+id/hoursTextView"
-        tools:text="52:34" />
+        android:inputType="number"
+        android:maxLines="1"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/applyButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/hintTextView"
+        tools:text="15" />
 
     <Button
-        android:id="@+id/startButton"
+        android:id="@+id/applyButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
+        android:text="@string/apply"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/countdownTextView"
-        tools:text="Старт" />
+        app:layout_constraintTop_toBottomOf="@id/minutesEditText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
