--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,4 +19,9 @@
         android:name="com.georgcantor.counter.view.fragment.GraphFragment"
         android:label="GraphFragment" />
 
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.georgcantor.counter.view.fragment.SettingsFragment"
+        android:label="SettingsFragment" />
+
 </navigation>
