--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -12,13 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/settings_hint"
+        android:text="@string/change_hours_hint"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/minutesEditText"
+        app:layout_constraintBottom_toTopOf="@+id/hoursEditText"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/minutesEditText"
+        android:id="@+id/hoursEditText"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:inputType="number"
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/hintTextView"
-        tools:text="15" />
+        tools:text="10" />
 
     <Button
         android:id="@+id/applyButton"
@@ -38,6 +38,6 @@
         android:text="@string/apply"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/minutesEditText" />
+        app:layout_constraintTop_toBottomOf="@id/hoursEditText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
