--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -29,4 +29,9 @@
         android:name="com.georgcantor.counter.view.fragment.EditFragment"
         android:label="EditFragment" />
 
+    <fragment
+        android:id="@+id/addFragment"
+        android:name="com.georgcantor.counter.view.fragment.AddFragment"
+        android:label="AddFragment" />
+
 </navigation>
