--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -21,7 +21,7 @@
         android:id="@+id/hoursEditText"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:maxLines="1"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/applyButton"
